# robusta_testing_task

./: .env.test  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/swag_labs/: __init__.py
src/swag_labs/pages/: cart_page.py  checkout_complee.py  checkout_complete.py  checkout_info.py  checkout_overview.py  inventory_page.py  login.py  page.py  product_page.py
tests/: conftest.py  test_login.py  test_user_journey.py
tests/utils/: driver.py
