[project]
name = "swag-labs"
version = "0.1.0"
description = "Automation test with pytest and Selenium for swag-labs website"
readme = "README.md"
authors = [
    { name = "ece-mohammad", email = "kuro.ece@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "environs>=14.2.0",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--verbose"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
